add method of recover password
