# generated/src/main/java/com/shoppingcart/user/model/RecoveryPasswordRequest.java
@@ -1,0 +1,94 @@
+package com.shoppingcart.user.model;
+
+import java.net.URI;
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import org.openapitools.jackson.nullable.JsonNullable;
+import java.time.OffsetDateTime;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+import io.swagger.v3.oas.annotations.media.Schema;
+
+
+import java.util.*;
+import jakarta.annotation.Generated;
+
+/**
+ * RecoveryPasswordRequest
+ */
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen")
+public class RecoveryPasswordRequest {
+
+  private String email;
+
+  public RecoveryPasswordRequest() {
+    super();
+  }
+
+  /**
+   * Constructor with only required parameters
+   */
+  public RecoveryPasswordRequest(String email) {
+    this.email = email;
+  }
+
+  public RecoveryPasswordRequest email(String email) {
+    this.email = email;
+    return this;
+  }
+
+  /**
+   * Get email
+   * @return email
+  */
+  @NotNull 
+  @Schema(name = "email", example = "jorge@gmail.com", requiredMode = Schema.RequiredMode.REQUIRED)
+  @JsonProperty("email")
+  public String getEmail() {
+    return email;
+  }
+
+  public void setEmail(String email) {
+    this.email = email;
+  }
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    RecoveryPasswordRequest recoveryPasswordRequest = (RecoveryPasswordRequest) o;
+    return Objects.equals(this.email, recoveryPasswordRequest.email);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(email);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class RecoveryPasswordRequest {\n");
+    sb.append("    email: ").append(toIndentedString(email)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
